# bs

./: .tokeignore  Cargo.toml  README.md  bargo.toml  build.rs  rust-toolchain.toml
.cargo/: config.toml
.zed/: settings.json
_old/: Cargo.toml
_old/.cargo/: config.toml
_old/src/: interrupts.rs  kbhandler.rs  lib.rs  main.rs  vga.rs
boot/: Cargo.toml  README.md  boot-program.ld  boot-target.json
boot/bootloader/: Cargo.toml  README.md  build.rs  link.ld  postbuild.rs
boot/bootloader/src/: main.rs
boot/bootstrapper/: Cargo.toml  README.md  link.ld  postbuild.rs
boot/bootstrapper/src/: disk.rs  main.rs
boot/elf-loader/: Cargo.toml  README.md  build.rs  postbuild.rs
boot/elf-loader/src/: main.rs
bootloader/: Cargo.toml  README.md  link.ld
bootloader/.cargo/: config.toml
bootloader/src/: disks.rs  elf.rs  gdt.rs  main.rs  paging.rs  print.rs
bootloader/src/elf/: structs.rs
bootstrapper/: Cargo.toml  README.md  build.rs  link.ld
bootstrapper/src/: main.rs
common/src/: disks.rs  lib.rs  paging.rs  printing.rs
exrs/: Cargo.toml  README.md
exrs/exrs-macros/: Cargo.toml
exrs/exrs-macros/src/: lib.rs
exrs/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: main.rs  vga_text_buffer.rs
lib/acpi/: Cargo.toml  README.md
lib/acpi/src/: lib.rs  rsdp.rs  rsdt.rs
lib/ata/: Cargo.toml  README.md
lib/ata/src/: enums.rs  lib.rs
lib/build-tools/: Cargo.toml  README.md
lib/build-tools/src/: lib.rs
lib/common/: Cargo.toml
lib/common/src/: disks.rs  gdt.rs  interrupts.rs  lib.rs  paging.rs  printing.rs
lib/frieren/: Cargo.toml  README.md
lib/frieren/src/: lib.rs  structs.rs
lib/pci/: Cargo.toml  README.md
lib/pci/src/: address_space.rs  classification.rs  configuration.rs  lib.rs
qemu/: Cargo.toml  README.md  build.rs  postbuild.rs
qemu/src/: main.rs
src/: main.rs
