# This is here purely for rust-analyzer's benefit

[workspace]
resolver = "2"
members = [
    "kernel",
    "boot/bootloader",
    "boot/bootstrapper",
    "lib/common",
    "lib/build-tools",
    "lib/frieren",
    "qemu",
]

# For minimising the binary size - taken from phil-opp's bootloader and https://github.com/johnthagen/min-sized-rust
[profile.dev]
panic = "abort"
opt-level = "s"
strip = true
codegen-units = 1
lto = true

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
codegen-units = 1
lto = true
