[workspace]
resolver = "2"
members = [
    "lib/common",
    "lib/build-tools",
    "lib/frieren",
    "lib/acpi",
    "lib/pci",
    "lib/ata",

    "kernel",

    "qemu",

    "exrs",
    "exrs/exrs-macros",
]

[workspace.dependencies]
pci = { path = "lib/pci" }
ata = { path = "lib/ata" }
acpi = { path = "lib/acpi" }
frieren = { path = "lib/frieren" }
common = { path = "lib/common" }
exrs = { path = "exrs" }
