[package]
name = "os"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
bootloader = "0.9"
linked_list_allocator = "0.10.5"
pc-keyboard = "0.7.0"
pic8259 = "0.10.4"
spin = "0.9.8"
uart_16550 = "0.3.0"
volatile = "0.5.1"
x86_64 = "0.14.11"

[dependencies.crossbeam-queue]
version = "0.3.8"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false


[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={},index=0"]
run-args = ["-drive", "format=raw,file=disk.bin,index=1,media=disk"]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1

[workspace]
